# Automatic-Number-Plate-Recognition

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: build.yml
cmake/anpr/: CMakeLists.txt  CMakePresets.json  vcpkg.json
cmake/anpr/capture/: CMakeLists.txt
cmake/anpr/capture/include/capture/: FrameSourceFactory.h  HikvisionDiscovery.h  HikvisionRtspFrameSource.h  SimulatedFileFrameSource.h
cmake/anpr/capture/src/: FrameSourceFactory.cpp  HikvisionDiscovery.cpp  HikvisionRtspFrameSource.cpp  SimulatedFileFrameSource.cpp
cmake/anpr/config/: anpr.example.json  anpr.json
cmake/anpr/control/: CMakeLists.txt
cmake/anpr/control/src/: MultiCameraPipeline.cpp  MultiCameraPipeline.h  main.cpp
cmake/anpr/core/: CMakeLists.txt
cmake/anpr/core/include/core/: BoundedQueue.h  Config.h  Logger.h  Types.h
cmake/anpr/core/include/core/interfaces/: IFrameSource.h  INetworkTransport.h  IPlateRecognizer.h
cmake/anpr/core/src/: Config.cpp  Logger.cpp
cmake/anpr/docs/: ARCHITECTURE.md
cmake/anpr/models/: charset_global.txt  prepare_models.py
cmake/anpr/network/: CMakeLists.txt
cmake/anpr/network/include/network/: MessageSchema.h  NetworkTransportFactory.h  TcpNetworkTransport.h
cmake/anpr/network/src/: MessageSchema.cpp  NetworkTransportFactory.cpp  TcpNetworkTransport.cpp
cmake/anpr/processing/: CMakeLists.txt
cmake/anpr/processing/include/processing/: MotionGate.h  OpenCvDnnPlateRecognizer.h  PlateDeduplicator.h  PlateRecognizerFactory.h  PlateTracker.h
cmake/anpr/processing/src/: MotionGate.cpp  OpenCvDnnPlateRecognizer.cpp  PlateRecognizerFactory.cpp  PlateTracker.cpp
cmake/anpr/tools/mock_server/: CMakeLists.txt  mock_server.cpp
cmake/anpr/training/: README.md  charset_tr.txt  data.yaml  data_tr.yaml  prepare_dataset.py  requirements.txt  train_detection.py  train_ocr.py
installer/: README.md  anpr.iss  package.ps1
proj/AnprStudio/: AnprStudio.csproj  AnprStudio.slnx  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
